--- a/.github/workflows/自动部署Firefox.yml
+++ b/.github/workflows/自动部署Firefox.yml
@@ -1,7 +1,7 @@
-name: 自动部署Firefox到SAP
+name: 自动部署Chrome到SAP
 
 on:
-  workflow_dispatch:  # 只允许手动触发
+  workflow_dispatch:
     inputs:
       region:
         description: '选择部署区域'
@@ -9,10 +9,8 @@ on:
         default: 'US(free)'
         type: choice
         options:
-          #  免费区域
-          - SG(free)  # azure新加披
-          - US(free)  # aws美国    
-          # AWS 区域
+          - SG(free)
+          - US(free)
           - AWS-AU(Sydney)
           - AWS-BR(São Paulo)
           - AWS-KR(Seoul)
@@ -22,7 +20,6 @@ on:
           - AWS-EU(Frankfurt)
           - AWS-JP(Tokyo)
           - AWS-SG(Singapore)
-          # GCP 区域
           - GCP-AU(Sydney)
           - GCP-BR(São Paulo)
           - GCP-US(IA)
@@ -32,7 +29,6 @@ on:
           - GCP-IL(Tel Aviv)
           - GCP-IN(Mumbai)
           - GCP-KSA(Dammam)
-          # Azure 区域
           - Azure-AU(Sydney)
           - Azure-BR(São Paulo)
           - Azure-CA(Montreal)
@@ -41,7 +37,6 @@ on:
           - Azure-EU(Netherlands)
           - Azure-JP(Tokyo)
           - Azure-SG(Singapore)
-          # SAP Neo 区域
           - Neo-UAE(Dubai)
           - Neo-KSA(Riyadh)
       app_name:
@@ -51,7 +46,7 @@ on:
 
 env:
   DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE || 'lscr.io/linuxserver/chrome:latest' }}
-  MEMORY: ${{ secrets.MEMORY || '1500M' }}
+  MEMORY: ${{ secrets.MEMORY || '1536M' }}
   DISK: ${{ secrets.DISK || '2048M' }}
 
 jobs:
@@ -71,164 +66,147 @@ jobs:
 
     - name: Determine CF API endpoint and app name
       run: |
-        # 设置API端点和生成随机字符串
         RANDOM_STR=$(head /dev/urandom | tr -dc 'a-z' | head -c 6)
-        
         case "${{ github.event.inputs.region }}" in
-          # 免费区域
           "SG(free)")
             echo "CF_API=https://api.cf.ap21.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-freesg$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-freesg$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "US(free)")
             echo "CF_API=https://api.cf.us10-001.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-freeus$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-freeus$RANDOM_STR" >> $GITHUB_ENV
             ;;
-          # AWS 区域
           "AWS-AU(Sydney)")
             echo "CF_API=https://api.cf.ap10.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-awsau$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-awsau$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "AWS-BR(São Paulo)")
             echo "CF_API=https://api.cf.br10.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-awsbr$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-awsbr$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "AWS-KR(Seoul)")
             echo "CF_API=https://api.cf.ap12.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-awskr$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-awskr$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "AWS-CA(Montreal)")
             echo "CF_API=https://api.cf.ca10.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-awsca$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-awsca$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "AWS-US(VA)")
             echo "CF_API=https://api.cf.us10-001.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-awsusva$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-awsusva$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "AWS-US(OR)")
             echo "CF_API=https://api.cf.us11.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-awsusor$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-awsusor$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "AWS-EU(Frankfurt)")
             echo "CF_API=https://api.cf.eu10-005.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-waseu$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-awseu$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "AWS-JP(Tokyo)")
             echo "CF_API=https://api.cf.jp10.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-awsjp$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-awsjp$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "AWS-SG(Singapore)")
             echo "CF_API=https://api.cf.ap11.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-awssg$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-awssg$RANDOM_STR" >> $GITHUB_ENV
             ;;
-          
-          # GCP 区域
           "GCP-AU(Sydney)")
             echo "CF_API=https://api.cf.ap30.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-gcpau$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-gcpau$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "GCP-BR(São Paulo)")
             echo "CF_API=https://api.cf.br30.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-gcpbr$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-gcpbr$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "GCP-US(IA)")
             echo "CF_API=https://api.cf.us30.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-gcpus$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-gcpus$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "GCP-EU(Frankfurt)")
             echo "CF_API=https://api.cf.eu30.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-gcpeu$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-gcpeu$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "GCP-JP(Osaka)")
             echo "CF_API=https://api.cf.jp30.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-gcpjpo$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-gcpjpo$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "GCP-JP(Tokyo)")
             echo "CF_API=https://api.cf.jp31.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-gcpjpt$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-gcpjpt$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "GCP-IL(Tel Aviv)")
             echo "CF_API=https://api.cf.il30.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-gcpil$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-gcpil$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "GCP-IN(Mumbai)")
             echo "CF_API=https://api.cf.in30.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-gcpin$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-gcpin$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "GCP-KSA(Dammam)")
             echo "CF_API=https://api.cf.sa31.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-gcpsa$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-gcpsa$RANDOM_STR" >> $GITHUB_ENV
             ;;
-          
-          # Azure 区域
           "Azure-AU(Sydney)")
             echo "CF_API=https://api.cf.ap20.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-azau$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-azau$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "Azure-BR(São Paulo)")
             echo "CF_API=https://api.cf.br20.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-azbr$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-azbr$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "Azure-CA(Montreal)")
             echo "CF_API=https://api.cf.ca20.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-azca$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-azca$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "Azure-US(VA)")
             echo "CF_API=https://api.cf.us21.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-azva$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-azva$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "Azure-US(WA)")
             echo "CF_API=https://api.cf.us20.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-azwa$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-azwa$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "Azure-EU(Netherlands)")
             echo "CF_API=https://api.cf.eu20-001.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-azeu$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-azeu$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "Azure-JP(Tokyo)")
             echo "CF_API=https://api.cf.jp20.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-azjp$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-azjp$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "Azure-SG(Singapore)")
             echo "CF_API=https://api.cf.ap21.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-azsg$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-azsg$RANDOM_STR" >> $GITHUB_ENV
             ;;
-          
-          # SAP Neo 区域
           "Neo-UAE(Dubai)")
             echo "CF_API=https://api.cf.neo-ae1.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-neouae$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-neouae$RANDOM_STR" >> $GITHUB_ENV
             ;;
           "Neo-KSA(Riyadh)")
             echo "CF_API=https://api.cf.neo-sa1.hana.ondemand.com" >> $GITHUB_ENV
-            echo "APP_NAME=firefox-neoksa$RANDOM_STR" >> $GITHUB_ENV
+            echo "APP_NAME=chrome-neoksa$RANDOM_STR" >> $GITHUB_ENV
             ;;
         esac
-        
-        # 如果用户提供了应用名称，则使用用户提供的
+
         if [ -n "${{ github.event.inputs.app_name }}" ]; then
           echo "APP_NAME=${{ github.event.inputs.app_name }}" >> $GITHUB_ENV
         fi
-        
+
         echo "使用API端点: $CF_API"
         echo "应用名称: $APP_NAME"
-        echo "部署类型: ${{ env.DOCKER_IMAGE }}"
+        echo "部署镜像: ${{ env.DOCKER_IMAGE }}"
 
     - name: Login to Cloud Foundry
       run: |
         cf login -a ${{ env.CF_API }} -u "${{ secrets.EMAIL }}" -p "${{ secrets.PASSWORD }}"
-
-        # 获取组织列表
         ORG=$(cf orgs | sed -n '4p')
         echo "Selected org: $ORG"
         echo "ORG=$ORG" >> $GITHUB_ENV
-
-        # 获取空间列表
         SPACE=$(cf spaces | sed -n '4p')
         echo "Selected space: $SPACE"
         echo "SPACE=$SPACE" >> $GITHUB_ENV
-
-        # 使用获取的组织和空间重新登录
         cf login -a ${{ env.CF_API }} -u "${{ secrets.EMAIL }}" -p "${{ secrets.PASSWORD }}" -o "$ORG" -s "$SPACE"
 
     - name: Deploy application
@@ -240,14 +218,25 @@ jobs:
           echo "伙计,没资源了,部署失败,请明天早上8:10至9:00再尝试部署,已清理失败部署残留"
           exit 1
         fi
-        
+
     - name: Set environment variables and restart app
       run: |
-        # VNC密码和语言环境变量
+        # 基础：语言、VNC/WEB 密码（两者都设，兼容不同镜像习惯）
         cf set-env ${{ env.APP_NAME }} LANG "${{ secrets.LANG || 'zh_CN.UTF-8' }}"
         cf set-env ${{ env.APP_NAME }} VNC_PASSWORD "${{ secrets.VNC_PASSWORD || '123456' }}"
-        
-        # 可选：从文件读取环境变量(如果存在)
+        cf set-env ${{ env.APP_NAME }} PASSWORD "${{ secrets.PASSWORD_WEB || '123456' }}"
+
+        # linuxserver/chrome 常用变量（按需在 secrets 中覆盖）
+        cf set-env ${{ env.APP_NAME }} PUID "${{ secrets.PUID || '1000' }}"
+        cf set-env ${{ env.APP_NAME }} PGID "${{ secrets.PGID || '1000' }}"
+        cf set-env ${{ env.APP_NAME }} TZ "${{ secrets.TZ || 'Asia/Shanghai' }}"
+        cf set-env ${{ env.APP_NAME }} UMASK "${{ secrets.UMASK || '022' }}"
+        cf set-env ${{ env.APP_NAME }} CUSTOM_USER "${{ secrets.CUSTOM_USER || 'user' }}"
+
+        # 如镜像支持从 PORT 变量监听，请保留（部分镜像会忽略）
+        cf set-env ${{ env.APP_NAME }} PORT "8080"
+
+        # 可选：从 .env 批量导入
         if [ -f .env ]; then
           while IFS= read -r line; do
             if [[ ! "$line" =~ ^# ]] && [[ -n "$line" ]]; then
@@ -256,23 +245,22 @@ jobs:
             fi
           done < .env
         fi
-        
+
         sleep 3
-        
         cf restage ${{ env.APP_NAME }}
 
     - name: Verify deployment
       run: |
         STATUS=$(cf app ${{ env.APP_NAME }} | grep "requested state:" | awk '{print $3}')
         if [ "$STATUS" = "started" ]; then
-          echo "✅ firefox启动成功"
+          echo "✅ Chrome 启动成功"
         else
           echo "❌ 应用启动失败，当前状态: $STATUS"
           echo "查看应用日志:"
           cf logs ${{ env.APP_NAME }} --recent
           exit 1
         fi
-        
+
     - name: 详细部署信息
       run: |
         echo "🚀 部署完成！详细信息如下："
@@ -280,11 +268,9 @@ jobs:
         echo "组织(ORG): ${{ env.ORG }}"
         echo "空间(SPACE): ${{ env.SPACE }}"
         echo "应用名称(App Name): ${{ env.APP_NAME }}"
-
-        # 获取应用路由
         ROUTE=$(cf app ${{ env.APP_NAME }} | grep "routes:" | awk '{print $2}')
         if [ -n "$ROUTE" ]; then
-          echo "Firefox—URL: https://$ROUTE"
+          echo "Chrome—URL: https://$ROUTE"
         else
           echo "⚠️ 未找到应用路由，请检查部署状态。"
         fi
