--- a/.github/workflows/自动部署Firefox.yml
+++ b/.github/workflows/自动部署Firefox.yml
@@ -45,9 +45,10 @@ on:
         default: ''
 
 env:
-  # 优先用仓库 Secrets 指定镜像；否则在下方步骤里自动回落到 GHCR: ghcr.io/<owner>/mini-chrome-novnc:latest
-  DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE || 'gcr.io/zenika-hub/alpine-chrome:124' }}
-  MEMORY: ${{ secrets.MEMORY || '3072M' }}
+  # 轻量化带UI的Chromium（含noVNC）
+  DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE || 'accetto/ubuntu-vnc-xfce-chromium-g3:latest' }}
+  MEMORY: ${{ secrets.MEMORY || '3000M' }}
+  # 提升磁盘以避免拉取/解压镜像时配额不足
   DISK: ${{ secrets.DISK || '4096M' }}
 
 jobs:
@@ -66,11 +67,8 @@ jobs:
         sudo apt-get install -y cf8-cli
 
     - name: Determine CF API endpoint and app name
-      shell: bash
       run: |
-        set -e
         RANDOM_STR=$(head /dev/urandom | tr -dc 'a-z' | head -c 6)
-
         case "${{ github.event.inputs.region }}" in
           "SG(free)")
             echo "CF_API=https://api.cf.ap21.hana.ondemand.com" >> $GITHUB_ENV
@@ -194,13 +192,6 @@ jobs:
             ;;
         esac
 
-        # 若未显式指定 DOCKER_IMAGE，自动使用 ghcr.io/<owner_lc>/mini-chrome-novnc:latest
-        if [ -z "${{ secrets.DOCKER_IMAGE }}" ]; then
-          OWNER_LC="$(echo "${GITHUB_REPOSITORY_OWNER}" | tr '[:upper:]' '[:lower:]')"
-          echo "DOCKER_IMAGE=ghcr.io/${OWNER_LC}/mini-chrome-novnc:latest" >> $GITHUB_ENV
-        fi
-
-        # 覆盖应用名（如果输入了）
         if [ -n "${{ github.event.inputs.app_name }}" ]; then
           echo "APP_NAME=${{ github.event.inputs.app_name }}" >> $GITHUB_ENV
         fi
@@ -220,9 +211,15 @@ jobs:
         echo "SPACE=$SPACE" >> $GITHUB_ENV
         cf login -a ${{ env.CF_API }} -u "${{ secrets.EMAIL }}" -p "${{ secrets.PASSWORD }}" -o "$ORG" -s "$SPACE"
 
-    - name: Deploy application
+    - name: Deploy application (bind noVNC to CF $PORT)
       run: |
-        if cf push ${{ env.APP_NAME }} --docker-image ${{ env.DOCKER_IMAGE }} -m ${{ env.MEMORY }} -k ${{ env.DISK }} --health-check-type port; then
+        # 通过覆盖启动命令把 noVNC 端口设置为 $PORT（Cloud Foundry 动态端口）
+        if cf push ${{ env.APP_NAME }} \
+          --docker-image ${{ env.DOCKER_IMAGE }} \
+          -m ${{ env.MEMORY }} -k ${{ env.DISK }} \
+          --health-check-type port \
+          -c 'bash -lc "export NOVNC_PORT=$PORT; /dockerstartup/startup.sh --verbose"'
+        then
           echo "Deployment successful"
         else
           cf delete ${{ env.APP_NAME }} -f
@@ -230,22 +227,23 @@ jobs:
           exit 1
         fi
 
-    - name: Set environment variables and restart app
+    - name: Set environment variables and restage
       run: |
-        # 重要：不要设置 PORT（CF 会注入动态 $PORT，镜像已按 $PORT 监听）
+        # 基础：语言、时区、noVNC密码（默认 headless）
         cf set-env ${{ env.APP_NAME }} LANG "${{ secrets.LANG || 'zh_CN.UTF-8' }}"
-        cf set-env ${{ env.APP_NAME }} VNC_PASSWORD "${{ secrets.VNC_PASSWORD || '123456' }}"
-        cf set-env ${{ env.APP_NAME }} RESOLUTION "${{ secrets.RESOLUTION || '1366x768x24' }}"
-        cf set-env ${{ env.APP_NAME }} START_URL "${{ secrets.START_URL || 'https://www.baidu.com' }}"
+        cf set-env ${{ env.APP_NAME }} TZ "${{ secrets.TZ || 'Asia/Shanghai' }}"
+        cf set-env ${{ env.APP_NAME }} VNC_PW "${{ secrets.VNC_PW || 'headless' }}"
+        # 分辨率/色深可按需覆盖
+        cf set-env ${{ env.APP_NAME }} VNC_RESOLUTION "${{ secrets.VNC_RESOLUTION || '1360x768' }}"
+        cf set-env ${{ env.APP_NAME }} VNC_COL_DEPTH "${{ secrets.VNC_COL_DEPTH || '24' }}"
+        # 长连接心跳，避免空闲断开（可选）
+        cf set-env ${{ env.APP_NAME }} NOVNC_HEARTBEAT "${{ secrets.NOVNC_HEARTBEAT || '30' }}"
 
-        # 可选：从 .env 批量导入（注：不会覆盖上面专门设定的变量）
+        # 可选：从 .env 批量导入
         if [ -f .env ]; then
           while IFS= read -r line; do
             if [[ ! "$line" =~ ^# ]] && [[ -n "$line" ]]; then
               IFS='=' read -r key value <<< "$line"
-              case "$key" in
-                PORT) continue ;;  # 不覆盖 CF 的 PORT
-              esac
               cf set-env ${{ env.APP_NAME }} "$key" "$value"
             fi
           done < .env
@@ -258,7 +256,7 @@ jobs:
       run: |
         STATUS=$(cf app ${{ env.APP_NAME }} | grep "requested state:" | awk '{print $3}')
         if [ "$STATUS" = "started" ]; then
-          echo "✅ Chrome 启动成功"
+          echo "✅ Chrome(Chromium) 启动成功"
         else
           echo "❌ 应用启动失败，当前状态: $STATUS"
           echo "查看应用日志:"
@@ -275,7 +273,8 @@ jobs:
         echo "应用名称(App Name): ${{ env.APP_NAME }}"
         ROUTE=$(cf app ${{ env.APP_NAME }} | grep "routes:" | awk '{print $2}')
         if [ -n "$ROUTE" ]; then
-          echo "Chrome—URL: https://$ROUTE/vnc.html"
+          echo "Chrome — URL: https://$ROUTE"
+          echo "提示：如需直接进入完整客户端，可访问 https://$ROUTE/vnc.html"
         else
           echo "⚠️ 未找到应用路由，请检查部署状态。"
         fi
