--- a/.github/workflows/自动部署Firefox.yml
+++ b/.github/workflows/自动部署Firefox.yml
@@ -14,7 +14,7 @@ on:
           - US(free)  # aws美国    
           # AWS 区域
           - AWS-AU(Sydney)
-          - AWS-BR(São Paulo)
+          - AWS-BR(S?o Paulo)
           - AWS-KR(Seoul)
           - AWS-CA(Montreal)
           - AWS-US(VA)
@@ -24,7 +24,7 @@ on:
           - AWS-SG(Singapore)
           # GCP 区域
           - GCP-AU(Sydney)
-          - GCP-BR(São Paulo)
+          - GCP-BR(S?o Paulo)
           - GCP-US(IA)
           - GCP-EU(Frankfurt)
           - GCP-JP(Osaka)
@@ -34,7 +34,7 @@ on:
           - GCP-KSA(Dammam)
           # Azure 区域
           - Azure-AU(Sydney)
-          - Azure-BR(São Paulo)
+          - Azure-BR(S?o Paulo)
           - Azure-CA(Montreal)
           - Azure-US(VA)
           - Azure-US(WA)
@@ -89,7 +89,7 @@ jobs:
             echo "CF_API=https://api.cf.ap10.hana.ondemand.com" >> $GITHUB_ENV
             echo "APP_NAME=firefox-awsau$RANDOM_STR" >> $GITHUB_ENV
             ;;
-          "AWS-BR(São Paulo)")
+          "AWS-BR(S?o Paulo)")
             echo "CF_API=https://api.cf.br10.hana.ondemand.com" >> $GITHUB_ENV
             echo "APP_NAME=firefox-awsbr$RANDOM_STR" >> $GITHUB_ENV
             ;;
@@ -127,7 +127,7 @@ jobs:
             echo "CF_API=https://api.cf.ap30.hana.ondemand.com" >> $GITHUB_ENV
             echo "APP_NAME=firefox-gcpau$RANDOM_STR" >> $GITHUB_ENV
             ;;
-          "GCP-BR(São Paulo)")
+          "GCP-BR(S?o Paulo)")
             echo "CF_API=https://api.cf.br30.hana.ondemand.com" >> $GITHUB_ENV
             echo "APP_NAME=firefox-gcpbr$RANDOM_STR" >> $GITHUB_ENV
             ;;
@@ -165,7 +165,7 @@ jobs:
             echo "CF_API=https://api.cf.ap20.hana.ondemand.com" >> $GITHUB_ENV
             echo "APP_NAME=firefox-azau$RANDOM_STR" >> $GITHUB_ENV
             ;;
-          "Azure-BR(São Paulo)")
+          "Azure-BR(S?o Paulo)")
             echo "CF_API=https://api.cf.br20.hana.ondemand.com" >> $GITHUB_ENV
             echo "APP_NAME=firefox-azbr$RANDOM_STR" >> $GITHUB_ENV
             ;;
@@ -265,9 +265,9 @@ jobs:
       run: |
         STATUS=$(cf app ${{ env.APP_NAME }} | grep "requested state:" | awk '{print $3}')
         if [ "$STATUS" = "started" ]; then
-          echo "✅ firefox启动成功"
+          echo "? firefox启动成功"
         else
-          echo "❌ 应用启动失败，当前状态: $STATUS"
+          echo "? 应用启动失败，当前状态: $STATUS"
           echo "查看应用日志:"
           cf logs ${{ env.APP_NAME }} --recent
           exit 1
@@ -275,16 +275,26 @@ jobs:
         
     - name: 详细部署信息
       run: |
-        echo "🚀 部署完成！详细信息如下："
+        echo "?? 部署完成！详细信息如下："
         echo "区域(Region): ${{ github.event.inputs.region }}"
         echo "组织(ORG): ${{ env.ORG }}"
         echo "空间(SPACE): ${{ env.SPACE }}"
         echo "应用名称(App Name): ${{ env.APP_NAME }}"
 
-        # 获取应用路由
-        ROUTE=$(cf app ${{ env.APP_NAME }} | grep "routes:" | awk '{print $2}')
+         # 获取应用路由
+        ROUTE=$(cf app ${{ env.APP_NAME }} | awk '/routes:/{print $2}')
         if [ -n "$ROUTE" ]; then
-          echo "Firefox—URL: https://$ROUTE"
+          # 如果设置了 VNC 密码，就把它拼进 URL；否则不带 password 参数
+          if [ -n "${{ secrets.VNC_PASSWORD }}" ]; then
+            PW="&password=${{ secrets.VNC_PASSWORD }}"
+          else
+            PW=""
+          fi
+
+          # 大多数镜像的 noVNC 页面路径是 /vnc.html
+          # 少数镜像可能是 /novnc/vnc.html，若打不开请把下面一行里的路径改成 /novnc/vnc.html
+          echo "Firefox — 直达URL（免点Connect/免输密码）:"
+          echo "https://$ROUTE/vnc.html?autoconnect=1&reconnect=1&resize=remote$PW"
         else
-          echo "⚠️ 未找到应用路由，请检查部署状态。"
+          echo "?? 未找到应用路由，请检查部署状态。"
         fi
